--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -17,6 +17,26 @@
 	position: relative;
 }
 
+.Seeds1 {
+	width: 10%;
+	height: 14%;
+	background: white;
+	border-radius: 40%;
+	position: absolute;
+	top: 50%;
+	left: 25%;
+}
+
+.Seeds2 {
+	width: 10%;
+	height: 14%;
+	background: white;
+	border-radius: 40%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
 .Meat {
 	height: 8%;
 	width: 80%;
